@@ -25,49 +25,61 @@
 
 package java.lang.reflect.code.bytecode;
 
-import java.lang.classfile.ClassModel;
 import java.lang.classfile.ClassFile;
 import java.lang.classfile.CodeBuilder;
 import java.lang.classfile.Label;
-import java.lang.classfile.components.ClassPrinter;
 import java.lang.constant.*;
-import java.lang.reflect.code.op.CoreOps.*;
+import java.lang.reflect.code.op.CoreOp;
+import java.lang.reflect.code.op.CoreOp.*;
 
-import java.io.File;
-import java.io.FileOutputStream;
+import java.lang.classfile.ClassBuilder;
 import java.lang.classfile.Opcode;
 import java.lang.classfile.TypeKind;
+import java.lang.classfile.attribute.ConstantValueAttribute;
+import java.lang.invoke.LambdaMetafactory;
 import java.lang.reflect.code.Block;
-import java.lang.reflect.code.Body;
-import java.lang.reflect.code.op.CoreOps;
 import java.lang.reflect.code.Op;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.code.Value;
 import java.lang.reflect.code.analysis.Liveness;
+import java.lang.reflect.code.type.ArrayType;
 import java.lang.reflect.code.type.FieldRef;
 import java.lang.reflect.code.type.MethodRef;
 import java.lang.reflect.code.type.FunctionType;
 import java.lang.reflect.code.type.JavaType;
 import java.lang.reflect.code.TypeElement;
-import java.util.ArrayDeque;
+import java.lang.reflect.code.type.VarType;
 import java.util.ArrayList;
 import java.util.BitSet;
-import java.util.Deque;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+
+import static java.lang.constant.ConstantDescs.*;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.code.Quotable;
+import java.lang.reflect.code.type.ClassType;
+import java.lang.reflect.code.type.PrimitiveType;
+import java.util.stream.Stream;
 
 /**
  * Transformer of code models to bytecode.
  */
 public final class BytecodeGenerator {
-    private BytecodeGenerator() {
-    }
+
+    private static final DirectMethodHandleDesc DMHD_LAMBDA_METAFACTORY = ofCallsiteBootstrap(
+            LambdaMetafactory.class.describeConstable().orElseThrow(),
+            "metafactory",
+            CD_CallSite, CD_MethodType, CD_MethodHandle, CD_MethodType);
+
+    private static final DirectMethodHandleDesc DMHD_LAMBDA_ALT_METAFACTORY = ofCallsiteBootstrap(
+            LambdaMetafactory.class.describeConstable().orElseThrow(),
+            "altMetafactory",
+            CD_CallSite, CD_Object.arrayType());
 
     /**
      * Transforms the invokable operation to bytecode encapsulated in a method of hidden class and exposed
@@ -82,23 +94,10 @@ public final class BytecodeGenerator {
         String name = iop instanceof FuncOp fop ? fop.funcName() : "m";
         byte[] classBytes = generateClassData(l, name, iop);
 
-        {
-            print(classBytes);
-            try {
-                File f = new File("f.class");
-                try (FileOutputStream fos = new FileOutputStream(f)) {
-                    fos.write(classBytes);
-                }
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-        }
-
         MethodHandles.Lookup hcl;
         try {
             hcl = l.defineHiddenClass(classBytes, true);
         } catch (IllegalAccessException e) {
-            e.printStackTrace();
             throw new RuntimeException(e);
         }
 
@@ -109,11 +108,6 @@ public final class BytecodeGenerator {
         } catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
         }
-    }
-
-    private static void print(byte[] classBytes) {
-        ClassModel cm = ClassFile.of().parse(classBytes);
-        ClassPrinter.toYaml(cm, ClassPrinter.Verbosity.CRITICAL_ATTRIBUTES, System.out::print);
     }
 
     /**
@@ -139,168 +133,237 @@ public final class BytecodeGenerator {
      * @param <O> the type of the invokable operation
      */
     public static <O extends Op & Op.Invokable> byte[] generateClassData(MethodHandles.Lookup lookup,
-                                                                         String name, O iop) {
+                                                                         String name,
+                                                                         O iop) {
         if (!iop.capturedValues().isEmpty()) {
             throw new UnsupportedOperationException("Operation captures values");
         }
 
         String packageName = lookup.lookupClass().getPackageName();
-        String className = packageName.isEmpty()
+        ClassDesc className = ClassDesc.of(packageName.isEmpty()
                 ? name
-                : packageName + "." + name;
-        Liveness liveness = new Liveness(iop);
-        MethodTypeDesc mtd = MethodRef.toNominalDescriptor(iop.invokableType());
-        byte[] classBytes = ClassFile.of().build(ClassDesc.of(className), clb ->
-                clb.withMethodBody(
-                        name,
-                        mtd,
-                        ClassFile.ACC_PUBLIC | ClassFile.ACC_STATIC,
-                        cb -> cb.transforming(new BranchCompactor(), cob -> {
-                            ConversionContext c = new ConversionContext(lookup, liveness, cob);
-                            generateBody(iop.body(), cob, c);
-                        })));
+                : packageName + "." + name);
+        byte[] classBytes = ClassFile.of().build(className, clb -> {
+            List<LambdaOp> lambdaSink = new ArrayList<>();
+            BitSet quotable = new BitSet();
+            generateMethod(lookup, className, name, iop, clb, lambdaSink, quotable);
+            for (int i = 0; i < lambdaSink.size(); i++) {
+                LambdaOp lop = lambdaSink.get(i);
+                if (quotable.get(i)) {
+                    clb.withField("lambda$" + i + "$op", CD_String, fb -> fb
+                            .withFlags(ClassFile.ACC_STATIC)
+                            .with(ConstantValueAttribute.of(quote(lop).toText())));
+                }
+                generateMethod(lookup, className, "lambda$" + i, lop, clb, lambdaSink, quotable);
+            }
+        });
         return classBytes;
     }
 
-    /*
-        Live list of slot, value, v, and value, r, after which no usage of v dominates r
-        i.e. liveness range.
-        Free list, once slot goes dead it is added to the free list, so it can be reused.
+    private static <O extends Op & Op.Invokable> void generateMethod(MethodHandles.Lookup lookup,
+                                                                     ClassDesc className,
+                                                                     String methodName,
+                                                                     O iop,
+                                                                     ClassBuilder clb,
+                                                                     List<LambdaOp> lambdaSink,
+                                                                     BitSet quotable) {
 
-        Block args need to have a fixed mapping to locals, unless the stack is used.
-     */
+        List<Value> capturedValues = iop instanceof LambdaOp lop ? lop.capturedValues() : List.of();
+        MethodTypeDesc mtd = MethodRef.toNominalDescriptor(
+                iop.invokableType()).insertParameterTypes(0, capturedValues.stream()
+                        .map(Value::type).map(BytecodeGenerator::toClassDesc).toArray(ClassDesc[]::new));
+        clb.withMethodBody(methodName, mtd, ClassFile.ACC_PUBLIC | ClassFile.ACC_STATIC,
+                cb -> cb.transforming(new BranchCompactor(), cob ->
+                    new BytecodeGenerator(lookup, className, capturedValues, new Liveness(iop),
+                                          iop.body().blocks(), cob, lambdaSink, quotable).generate()));
+    }
 
-    static final class ConversionContext {
-        final MethodHandles.Lookup lookup;
-        final Liveness liveness;
-        final CodeBuilder cb;
-        final Map<Object, Label> labels;
-        final Map<Block, LiveSlotSet> liveSet;
-        Block current;
-        final Set<Block> catchingBlocks;
+    private record Slot(int slot, TypeKind typeKind) {}
+    private record ExceptionRegionWithBlocks(CoreOp.ExceptionRegionEnter ere, BitSet blocks) {}
 
-        public ConversionContext(MethodHandles.Lookup lookup, Liveness liveness, CodeBuilder cb) {
-            this.lookup = lookup;
-            this.liveness = liveness;
-            this.cb = cb;
-            this.labels = new HashMap<>();
-            this.liveSet = new HashMap<>();
-            this.catchingBlocks = new HashSet<>();
-        }
+    private final MethodHandles.Lookup lookup;
+    private final ClassDesc className;
+    private final List<Value> capturedValues;
+    private final List<Block> blocks;
+    private final CodeBuilder cob;
+    private final Label[] blockLabels;
+    private final List<ExceptionRegionWithBlocks> allExceptionRegions;
+    private final BitSet[] blocksRegionStack;
+    private final BitSet blocksToVisit, catchingBlocks;
+    private final Map<Value, Slot> slots;
+    private final List<LambdaOp> lambdaSink;
+    private final BitSet quotable;
+    private Op.Result oprOnStack;
 
-        public Label getLabel(Object b) {
-            return labels.computeIfAbsent(b, _b -> cb.newLabel());
-        }
+    private BytecodeGenerator(MethodHandles.Lookup lookup,
+                              ClassDesc className,
+                              List<Value> capturedValues,
+                              Liveness liveness,
+                              List<Block> blocks,
+                              CodeBuilder cob,
+                              List<LambdaOp> lambdaSink,
+                              BitSet quotable) {
+        this.lookup = lookup;
+        this.className = className;
+        this.capturedValues = capturedValues;
+        this.blocks = blocks;
+        this.cob = cob;
+        this.blockLabels = new Label[blocks.size()];
+        this.allExceptionRegions = new ArrayList<>();
+        this.blocksRegionStack = new BitSet[blocks.size()];
+        this.blocksToVisit = new BitSet(blocks.size());
+        this.catchingBlocks = new BitSet();
+        this.slots = new HashMap<>();
+        this.lambdaSink = lambdaSink;
+        this.quotable = quotable;
+    }
 
-        void setCurrentBlock(Block current) {
-            this.current = current;
-            liveSet.computeIfAbsent(current, b -> new LiveSlotSet());
-        }
+    private void setExceptionRegionStack(Block.Reference target, BitSet activeRegionStack) {
+        setExceptionRegionStack(target.targetBlock().index(), activeRegionStack);
+    }
 
-        LiveSlotSet liveSlotSet(Block b) {
-            return liveSet.computeIfAbsent(b, _b -> new LiveSlotSet());
-        }
-
-        LiveSlotSet liveSlotSet() {
-            return liveSet.get(current);
-        }
-
-        int getSlot(Value v) {
-            return liveSlotSet().getSlot(v);
-        }
-
-        int getOrAssignSlot(Value v, boolean assignIfUnused) {
-            return liveSlotSet().getOrAssignSlot(v, assignIfUnused);
-        }
-
-        int assignSlot(Value v) {
-            return liveSlotSet().assignSlot(v);
-        }
-
-        void freeSlot(Value v) {
-            liveSlotSet().freeSlot(v);
-        }
-
-        boolean isLastUse(Value v, Op op) {
-            return liveness.isLastUse(v, op);
-        }
-
-        void freeSlotsOfOp(Op op) {
-            for (Value v : op.operands()) {
-                if (isLastUse(v, op)) {
-                    freeSlot(v);
-                }
-            }
-
-            for (Block.Reference s : op.successors()) {
-                for (Value v : s.arguments()) {
-                    if (isLastUse(v, op)) {
-                        freeSlot(v);
-                    }
-                }
-            }
-        }
-
-        void transitionLiveSlotSetTo(Block successor) {
-            liveSlotSet(successor).transitionLiveSlotSetFrom(liveSlotSet());
+    private void setExceptionRegionStack(int blockIndex, BitSet activeRegionStack) {
+        if (blocksRegionStack[blockIndex] == null) {
+            blocksToVisit.set(blockIndex);
+            blocksRegionStack[blockIndex] = activeRegionStack;
+            activeRegionStack.stream().forEach(r -> allExceptionRegions.get(r).blocks.set(blockIndex));
         }
     }
 
-    private static void processOperands(CodeBuilder cob,
-                                        ConversionContext c,
-                                        Op op,
-                                        boolean isLastOpResultOnStack) {
-        for (int i = isLastOpResultOnStack ? 1 : 0; i < op.operands().size(); i++) {
-            Value operand = op.operands().get(i);
-            if (operand instanceof Op.Result or &&
-                    or.op() instanceof CoreOps.ConstantOp constantOp &&
-                    !constantOp.resultType().equals(JavaType.J_L_CLASS)) {
-                cob.constantInstruction(fromValue(constantOp.value()));
-            } else {
-                int slot = c.getSlot(operand);
-                cob.loadInstruction(toTypeKind(operand.type()), slot);
+    private Label getLabel(Block.Reference target) {
+        return getLabel(target.targetBlock().index());
+    }
+
+    private Label getLabel(int blockIndex) {
+        Label l = blockLabels[blockIndex];
+        if (l == null) {
+            blockLabels[blockIndex] = l = cob.newLabel();
+        }
+        return l;
+    }
+
+    private Slot allocateSlot(Value v) {
+        return slots.computeIfAbsent(v, _ -> {
+            TypeKind tk = toTypeKind(v.type());
+            return new Slot(cob.allocateLocal(tk), tk);
+        });
+    }
+
+    private void storeIfUsed(Value v) {
+        if (!v.uses().isEmpty()) {
+            Slot slot = allocateSlot(v);
+            cob.storeInstruction(slot.typeKind(), slot.slot());
+        } else {
+            // Only pop results from stack if the value has no further use (no valid slot)
+            switch (toTypeKind(v.type()).slotSize()) {
+                case 1 -> cob.pop();
+                case 2 -> cob.pop2();
             }
         }
     }
 
-    private static ConstantDesc fromValue(Object value) {
-        return switch (value) {
-            case ConstantDesc cd -> cd;
-            case JavaType td -> td.toNominalDescriptor();
-            default -> throw new IllegalArgumentException("Unsupported constant value: " + value);
+    private Slot load(Value v) {
+        if (v instanceof Op.Result or &&
+                or.op() instanceof CoreOp.ConstantOp constantOp &&
+                !constantOp.resultType().equals(JavaType.J_L_CLASS)) {
+            var c = (Constable)constantOp.value();
+            cob.constantInstruction(c == null ? ConstantDescs.NULL : c.describeConstable().orElseThrow());
+            return null;
+        } else {
+            Slot slot = slots.get(v);
+            cob.loadInstruction(slot.typeKind(), slot.slot());
+            return slot;
+        }
+    }
+
+    private void processFirstOperand(Op op) {
+        processOperand(op.operands().getFirst());;
+    }
+
+    private void processOperand(Value operand) {
+        if (oprOnStack == null) {
+            load(operand);
+        } else {
+            assert oprOnStack == operand;
+            oprOnStack = null;
+        }
+    }
+
+    private void processOperands(Op op) {
+        processOperands(op.operands());
+    }
+
+    private void processOperands(List<Value> operands) {
+        if (oprOnStack == null) {
+            operands.forEach(this::load);
+        } else {
+            assert !operands.isEmpty() && oprOnStack == operands.getFirst();
+            oprOnStack = null;
+            for (int i = 1; i < operands.size(); i++) {
+                load(operands.get(i));
+            }
+        }
+    }
+
+    // Some of the operations can be deferred
+    private static boolean canDefer(Op op) {
+        return switch (op) {
+            case ConstantOp cop -> canDefer(cop);
+            case VarOp vop -> canDefer(vop);
+            case VarAccessOp.VarLoadOp vlop -> canDefer(vlop);
+            default -> false;
         };
     }
 
-    // Determines if the operation result used only by the next operation as the first operand
-    private static boolean isResultOnlyUse(Op.Result opr) {
-        Set<Op.Result> uses = opr.uses();
-        if (uses.size() != 1) {
-            return false;
-        }
+    // Constant can be deferred, except for loading of a class constant, which  may throw an exception
+    private static boolean canDefer(ConstantOp op) {
+        return !op.resultType().equals(JavaType.J_L_CLASS);
+    }
 
-        // Pass over constant operations
-        Op.Result use = uses.iterator().next();
+    // Var with a single-use block parameter operand can be deferred
+    private static boolean canDefer(VarOp op) {
+        return op.operands().getFirst() instanceof Block.Parameter bp && bp.uses().size() == 1;
+    }
+
+    // Var load can be deferred when not used as immediate operand
+    private static boolean canDefer(VarAccessOp.VarLoadOp op) {
+        return !isNextUse(op.result());
+    }
+
+    // This method narrows the first operand inconveniences of some operations
+    private static boolean isFirstOperand(Op nextOp, Op.Result opr) {
+        return switch (nextOp) {
+            // When there is no next operation
+            case null -> false;
+            // New object cannot use first operand from stack, new array fall through to the default
+            case NewOp op when !(op.constructorType().returnType() instanceof ArrayType) ->
+                false;
+            // For lambda the effective operands are captured values
+            case LambdaOp op ->
+                !op.capturedValues().isEmpty() && op.capturedValues().getFirst() == opr;
+            // Conditional branch may delegate to its binary test operation
+            case ConditionalBranchOp op when getConditionForCondBrOp(op) instanceof CoreOp.BinaryTestOp bto ->
+                isFirstOperand(bto, opr);
+            // Var store effective first operand is not the first one
+            case VarAccessOp.VarStoreOp op ->
+                op.operands().get(1) == opr;
+            // regular check of the first operand
+            default ->
+                !nextOp.operands().isEmpty() && nextOp.operands().getFirst() == opr;
+        };
+    }
+
+    // Determines if the operation result is immediatelly used by the next operation and so can stay on stack
+    private static boolean isNextUse(Op.Result opr) {
+        // Pass over deferred operations
         Op nextOp = opr.op();
         do {
             nextOp = opr.declaringBlock().nextOp(nextOp);
-        } while (nextOp instanceof CoreOps.ConstantOp);
-
-        if (nextOp == null || use != nextOp.result()) {
-            return false;
-        }
-
-        // Check if used in successor
-        for (Block.Reference s : nextOp.successors()) {
-            if (s.arguments().contains(opr)) {
-                return false;
-            }
-        }
-
-        List<Value> operands = nextOp.operands();
-        return !operands.isEmpty() && opr == operands.get(0);
+        } while (canDefer(nextOp));
+        return isFirstOperand(nextOp, opr);
     }
 
-    private static boolean isConditionForCondBrOp(CoreOps.BinaryTestOp op) {
+    private static boolean isConditionForCondBrOp(CoreOp.BinaryTestOp op) {
         // Result of op has one use as the operand of a CondBrOp op,
         // and both ops are in the same block
 
@@ -321,345 +384,348 @@ public final class BytecodeGenerator {
             }
         }
 
-        return use.op() instanceof CoreOps.ConditionalBranchOp;
+        return use.op() instanceof CoreOp.ConditionalBranchOp;
     }
 
-    private static TypeKind toTypeKind(TypeElement t) {
-        JavaType jt = (JavaType) t;
-        TypeElement rbt = jt.toBasicType();
-
-        if (rbt.equals(JavaType.INT)) {
-            return TypeKind.IntType;
-        } else if (rbt.equals(JavaType.LONG)) {
-            return TypeKind.LongType;
-        } else if (rbt.equals(JavaType.FLOAT)) {
-            return TypeKind.FloatType;
-        } else if (rbt.equals(JavaType.DOUBLE)) {
-            return TypeKind.DoubleType;
-        } else if (rbt.equals(JavaType.J_L_OBJECT)) {
-            return TypeKind.ReferenceType;
-        } else {
-            throw new IllegalArgumentException("Bad type: " + t);
-        }
+    static ClassDesc toClassDesc(TypeElement t) {
+        return switch (t) {
+            case VarType vt -> toClassDesc(vt.valueType());
+            case JavaType jt -> jt.toNominalDescriptor();
+            default ->
+                throw new IllegalArgumentException("Bad type: " + t);
+        };
     }
 
-    private static void storeInstruction(CodeBuilder cob, TypeKind tk, int slot) {
-        if (slot < 0) {
-            // Only pop results from stack if the value has no further use (no valid slot)
-            switch (tk.slotSize()) {
-                case 1 -> cob.pop();
-                case 2 -> cob.pop2();
-            }
-        } else {
-            cob.storeInstruction(tk, slot);
-        }
+    static TypeKind toTypeKind(TypeElement t) {
+        return switch (t) {
+            case VarType vt -> toTypeKind(vt.valueType());
+            case PrimitiveType pt -> TypeKind.from(pt.toNominalDescriptor());
+            case JavaType _ -> TypeKind.ReferenceType;
+            default ->
+                throw new IllegalArgumentException("Bad type: " + t);
+        };
     }
 
-    private static void computeExceptionRegionMembership(Body body, CodeBuilder cob, ConversionContext c) {
-        record ExceptionRegionWithBlocks(CoreOps.ExceptionRegionEnter ere, BitSet blocks) {
-        }
-        // List of all regions
-        final List<ExceptionRegionWithBlocks> allRegions = new ArrayList<>();
-        class BlockWithActiveExceptionRegions {
-            final Block block;
-            final BitSet activeRegionStack;
-            BlockWithActiveExceptionRegions(Block block, BitSet activeRegionStack) {
-                this.block = block;
-                this.activeRegionStack = activeRegionStack;
-                activeRegionStack.stream().forEach(r -> allRegions.get(r).blocks.set(block.index()));
-            }
-        }
-        final Set<Block> visited = new HashSet<>();
-        final Deque<BlockWithActiveExceptionRegions> stack = new ArrayDeque<>();
-        stack.push(new BlockWithActiveExceptionRegions(body.entryBlock(), new BitSet()));
+    private void generate() {
         // Compute exception region membership
-        while (!stack.isEmpty()) {
-            BlockWithActiveExceptionRegions bm = stack.pop();
-            Block b = bm.block;
-            if (!visited.add(b)) {
-                continue;
-            }
+        setExceptionRegionStack(0, new BitSet());
+        int blockIndex;
+        while ((blockIndex = blocksToVisit.nextSetBit(0)) >= 0) {
+            blocksToVisit.clear(blockIndex);
+            BitSet activeRegionStack = blocksRegionStack[blockIndex];
+            Block b = blocks.get(blockIndex);
             Op top = b.terminatingOp();
-            if (top instanceof CoreOps.BranchOp bop) {
-                stack.push(new BlockWithActiveExceptionRegions(bop.branch().targetBlock(), bm.activeRegionStack));
-            } else if (top instanceof CoreOps.ConditionalBranchOp cop) {
-                stack.push(new BlockWithActiveExceptionRegions(cop.falseBranch().targetBlock(), bm.activeRegionStack));
-                stack.push(new BlockWithActiveExceptionRegions(cop.trueBranch().targetBlock(), bm.activeRegionStack));
-            } else if (top instanceof CoreOps.ExceptionRegionEnter er) {
-                for (Block.Reference catchBlock : er.catchBlocks().reversed()) {
-                    c.catchingBlocks.add(catchBlock.targetBlock());
-                    stack.push(new BlockWithActiveExceptionRegions(catchBlock.targetBlock(), bm.activeRegionStack));
+            switch (top) {
+                case CoreOp.BranchOp bop ->
+                    setExceptionRegionStack(bop.branch(), activeRegionStack);
+                case CoreOp.ConditionalBranchOp cop -> {
+                    setExceptionRegionStack(cop.falseBranch(), activeRegionStack);
+                    setExceptionRegionStack(cop.trueBranch(), activeRegionStack);
                 }
-                BitSet activeRegionStack = (BitSet)bm.activeRegionStack.clone();
-                activeRegionStack.set(allRegions.size());
-                ExceptionRegionWithBlocks newNode = new ExceptionRegionWithBlocks(er, new BitSet());
-                allRegions.add(newNode);
-                stack.push(new BlockWithActiveExceptionRegions(er.start().targetBlock(), activeRegionStack));
-            } else if (top instanceof CoreOps.ExceptionRegionExit er) {
-                BitSet activeRegionStack = (BitSet)bm.activeRegionStack.clone();
-                activeRegionStack.clear(activeRegionStack.length() - 1);
-                stack.push(new BlockWithActiveExceptionRegions(er.end().targetBlock(), activeRegionStack));
+                case CoreOp.ExceptionRegionEnter er -> {
+                    for (Block.Reference catchBlock : er.catchBlocks().reversed()) {
+                        catchingBlocks.set(catchBlock.targetBlock().index());
+                        setExceptionRegionStack(catchBlock, activeRegionStack);
+                    }
+                    activeRegionStack = (BitSet)activeRegionStack.clone();
+                    activeRegionStack.set(allExceptionRegions.size());
+                    ExceptionRegionWithBlocks newNode = new ExceptionRegionWithBlocks(er, new BitSet());
+                    allExceptionRegions.add(newNode);
+                    setExceptionRegionStack(er.start(), activeRegionStack);
+                }
+                case CoreOp.ExceptionRegionExit er -> {
+                    activeRegionStack = (BitSet)activeRegionStack.clone();
+                    activeRegionStack.clear(activeRegionStack.length() - 1);
+                    setExceptionRegionStack(er.end(), activeRegionStack);
+                }
+                default -> {
+                }
             }
         }
+
         // Declare the exception regions
-        final List<Block> blocks = body.blocks();
-        for (ExceptionRegionWithBlocks erNode : allRegions.reversed()) {
+        for (ExceptionRegionWithBlocks erNode : allExceptionRegions.reversed()) {
             int start  = erNode.blocks.nextSetBit(0);
             while (start >= 0) {
                 int end = erNode.blocks.nextClearBit(start);
-                Label startLabel = c.getLabel(blocks.get(start));
-                Label endLabel = c.getLabel(blocks.get(end));
+                Label startLabel = getLabel(start);
+                Label endLabel = getLabel(end);
                 for (Block.Reference cbr : erNode.ere.catchBlocks()) {
-                    Block cb = cbr.targetBlock();
-                    if (!cb.parameters().isEmpty()) {
-                        JavaType jt = (JavaType) cb.parameters().get(0).type();
-                        ClassDesc type = jt.toNominalDescriptor();
-                        cob.exceptionCatch(startLabel, endLabel, c.getLabel(cb), type);
+                    List<Block.Parameter> params = cbr.targetBlock().parameters();
+                    if (!params.isEmpty()) {
+                        JavaType jt = (JavaType) params.get(0).type();
+                        cob.exceptionCatch(startLabel, endLabel, getLabel(cbr), jt.toNominalDescriptor());
                     } else {
-                        cob.exceptionCatchAll(startLabel, endLabel, c.getLabel(cb));
+                        cob.exceptionCatchAll(startLabel, endLabel, getLabel(cbr));
                     }
                 }
                 start = erNode.blocks.nextSetBit(end);
             }
         }
-    }
-
-    private static void generateBody(Body body, CodeBuilder cob, ConversionContext c) {
-        computeExceptionRegionMembership(body, cob, c);
 
         // Process blocks in topological order
         // A jump instruction assumes the false successor block is
         // immediately after, in sequence, to the predecessor
         // since the jump instructions branch on a true condition
         // Conditions are inverted when lowered to bytecode
-        List<Block> blocks = body.blocks();
         for (Block b : blocks) {
             // Ignore any non-entry blocks that have no predecessors
-            if (body.entryBlock() != b && b.predecessors().isEmpty()) {
+            if (!b.isEntryBlock() && b.predecessors().isEmpty()) {
                 continue;
             }
 
-            c.setCurrentBlock(b);
-            Label blockLabel = c.getLabel(b);
+            Label blockLabel = getLabel(b.index());
             cob.labelBinding(blockLabel);
 
             // If b is the entry block then all its parameters conservatively require slots
             // Some unused parameters might be declared before others that are used
-            b.parameters().forEach(p -> c.getOrAssignSlot(p, b.isEntryBlock()));
-
-            // If b is a catch block then the exception argument will be represented on the stack
-            if (c.catchingBlocks.contains(b)) {
-                // Retain block argument for exception table generation
-                Block.Parameter ex = b.parameters().get(0);
-                // Store in slot if used, otherwise pop
-                if (!ex.uses().isEmpty()) {
-                    int slot = c.getSlot(ex);
-                    storeInstruction(cob, toTypeKind(ex.type()), slot);
-                } else {
-                    cob.pop();
+            if (b.isEntryBlock()) {
+                List<Block.Parameter> parameters = b.parameters();
+                int i = 0;
+                // Captured values prepend parameters in lambda impl methods
+                for (Value cv : capturedValues) {
+                    slots.put(cv, new Slot(cob.parameterSlot(i++), toTypeKind(cv.type())));
+                }
+                for (Block.Parameter bp : parameters) {
+                    slots.put(bp, new Slot(cob.parameterSlot(i++), toTypeKind(bp.type())));
                 }
             }
 
+            // If b is a catch block then the exception argument will be represented on the stack
+            if (catchingBlocks.get(b.index())) {
+                // Retain block argument for exception table generation
+                storeIfUsed(b.parameters().get(0));
+            }
+
             List<Op> ops = b.ops();
-            // True if the last result is retained on the stack for use as first operand of current operation
-            boolean isLastOpResultOnStack = false;
-            Op.Result oprOnStack = null;
+            oprOnStack = null;
             for (int i = 0; i < ops.size() - 1; i++) {
-                Op o = ops.get(i);
-                TypeElement oprType = o.resultType();
-                TypeKind rvt = oprType.equals(JavaType.VOID) ? null : toTypeKind(oprType);
+                final Op o = ops.get(i);
+                final TypeElement oprType = o.resultType();
+                final TypeKind rvt = toTypeKind(oprType);
                 switch (o) {
                     case ConstantOp op -> {
-                        if (op.resultType().equals(JavaType.J_L_CLASS)) {
-                            // Loading a class constant may throw an exception so it cannot be deferred
-                            cob.ldc(fromValue(op.value()));
-                        } else {
-                          // Defer process to use, where constants are inlined
-                          // This applies to both operands and successor arguments
-                          rvt = null;
+                        if (!canDefer(op)) {
+                            // Constant can be deferred, except for a class constant, which  may throw an exception
+                            cob.ldc(((JavaType)op.value()).toNominalDescriptor());
+                            push(op.result());
                         }
                     }
                     case VarOp op -> {
                         //     %1 : Var<int> = var %0 @"i";
-                        processOperands(cob, c, op, isLastOpResultOnStack);
-                        isLastOpResultOnStack = false;
-                        // Use slot of variable result
-                        int slot = c.assignSlot(op.result());
-                        storeInstruction(cob, toTypeKind(op.varType()), slot);
-                        // Ignore result
-                        rvt = null;
+                        if (canDefer(op)) {
+                            // Var with a single-use block parameter operand can be deferred
+                            slots.put(op.result(), slots.get(op.operands().getFirst()));
+                        } else {
+                            processOperand(op.operands().getFirst());
+                            allocateSlot(op.result());
+                            push(op.result());
+                        }
                     }
                     case VarAccessOp.VarLoadOp op -> {
-                        // Use slot of variable result
-                        int slot = c.getSlot(op.operands().get(0));
-                        CoreOps.VarOp vop = op.varOp();
-                        cob.loadInstruction(toTypeKind(vop.varType()), slot);
+                        if (canDefer(op)) {
+                            // Var load can be deferred when not used as immediate operand
+                            slots.computeIfAbsent(op.result(), r -> slots.get(op.operands().getFirst()));
+                        } else {
+                            processFirstOperand(op);
+                            push(op.result());
+                        }
                     }
                     case VarAccessOp.VarStoreOp op -> {
-                        if (!isLastOpResultOnStack) {
-                            Value operand = op.operands().get(1);
-                            if (operand instanceof Op.Result or &&
-                                    or.op() instanceof CoreOps.ConstantOp constantOp &&
-                                    !constantOp.resultType().equals(JavaType.J_L_CLASS)) {
-                                cob.constantInstruction(fromValue(constantOp.value()));
-                            } else {
-                                int slot = c.getSlot(operand);
-                                cob.loadInstruction(toTypeKind(operand.type()), slot);
-                            }
-                            isLastOpResultOnStack = false;
-                        }
-                        // Use slot of variable result
-                        int slot = c.getSlot(op.operands().get(0));
-                        CoreOps.VarOp vop = op.varOp();
-                        storeInstruction(cob, toTypeKind(vop.varType()), slot);
+                        processOperand(op.operands().get(1));
+                        storeIfUsed(op.operands().get(0));
+                    }
+                    case ConvOp op -> {
+                        Value first = op.operands().getFirst();
+                        processOperand(first);
+                        TypeKind tk = toTypeKind(first.type());
+                        if (tk != rvt) conversion(cob, tk, rvt);
+                        push(op.result());
                     }
                     case NegOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         switch (rvt) { //this can be moved to CodeBuilder::neg(TypeKind)
-                            case IntType -> cob.ineg();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.ineg();
                             case LongType -> cob.lneg();
                             case FloatType -> cob.fneg();
                             case DoubleType -> cob.dneg();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case NotOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         cob.ifThenElse(CodeBuilder::iconst_0, CodeBuilder::iconst_1);
+                        push(op.result());
                     }
                     case AddOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::add(TypeKind)
-                            case IntType -> cob.iadd();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.iadd();
                             case LongType -> cob.ladd();
                             case FloatType -> cob.fadd();
                             case DoubleType -> cob.dadd();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case SubOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::sub(TypeKind)
-                            case IntType -> cob.isub();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.isub();
                             case LongType -> cob.lsub();
                             case FloatType -> cob.fsub();
                             case DoubleType -> cob.dsub();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case MulOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::mul(TypeKind)
-                            case IntType -> cob.imul();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.imul();
                             case LongType -> cob.lmul();
                             case FloatType -> cob.fmul();
                             case DoubleType -> cob.dmul();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case DivOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::div(TypeKind)
-                            case IntType -> cob.idiv();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.idiv();
                             case LongType -> cob.ldiv();
                             case FloatType -> cob.fdiv();
                             case DoubleType -> cob.ddiv();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case ModOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::rem(TypeKind)
-                            case IntType -> cob.irem();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.irem();
                             case LongType -> cob.lrem();
                             case FloatType -> cob.frem();
                             case DoubleType -> cob.drem();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case AndOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::and(TypeKind)
-                            case IntType, BooleanType -> cob.iand();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.iand();
                             case LongType -> cob.land();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case OrOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::or(TypeKind)
-                            case IntType, BooleanType -> cob.ior();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.ior();
                             case LongType -> cob.lor();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
                     }
                     case XorOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         switch (rvt) { //this can be moved to CodeBuilder::xor(TypeKind)
-                            case IntType, BooleanType -> cob.ixor();
+                            case IntType, BooleanType, ByteType, ShortType, CharType -> cob.ixor();
                             case LongType -> cob.lxor();
                             default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
                         }
+                        push(op.result());
+                    }
+                    case LshlOp op -> {
+                        processOperands(op);
+                        adjustRightTypeToInt(op);
+                        switch (rvt) { //this can be moved to CodeBuilder::shl(TypeKind)
+                            case IntType -> cob.ishl();
+                            case LongType -> cob.lshl();
+                            default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
+                        }
+                        push(op.result());
+                    }
+                    case AshrOp op -> {
+                        processOperands(op);
+                        adjustRightTypeToInt(op);
+                        switch (rvt) { //this can be moved to CodeBuilder::shr(TypeKind)
+                            case IntType, ByteType, ShortType, CharType -> cob.ishr();
+                            case LongType -> cob.lshr();
+                            default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
+                        }
+                        push(op.result());
+                    }
+                    case LshrOp op -> {
+                        processOperands(op);
+                        adjustRightTypeToInt(op);
+                        switch (rvt) { //this can be moved to CodeBuilder::ushr(TypeKind)
+                            case IntType, ByteType, ShortType, CharType -> cob.iushr();
+                            case LongType -> cob.lushr();
+                            default -> throw new IllegalArgumentException("Bad type: " + op.resultType());
+                        }
+                        push(op.result());
                     }
                     case ArrayAccessOp.ArrayLoadOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         cob.arrayLoadInstruction(rvt);
+                        push(op.result());
                     }
                     case ArrayAccessOp.ArrayStoreOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
-                        TypeKind evt = toTypeKind(op.operands().get(2).type());
-                        cob.arrayStoreInstruction(evt);
+                        processOperands(op);
+                        cob.arrayStoreInstruction(toTypeKind(op.operands().get(2).type()));
+                        push(op.result());
                     }
                     case ArrayLengthOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         cob.arraylength();
+                        push(op.result());
                     }
                     case BinaryTestOp op -> {
                         if (!isConditionForCondBrOp(op)) {
-                            processOperands(cob, c, op, isLastOpResultOnStack);
-                            cob.ifThenElse(prepareReverseCondition(cob, op), CodeBuilder::iconst_0, CodeBuilder::iconst_1);
-                        } else {
-                            // Processing is deferred to the CondBrOp, do not process the op result
-                            rvt = null;
+                            processOperands(op);
+                            cob.ifThenElse(prepareReverseCondition(op), CodeBuilder::iconst_0, CodeBuilder::iconst_1);
+                            push(op.result());
                         }
+                        // Processing is deferred to the CondBrOp, do not process the op result
                     }
                     case NewOp op -> {
-                        TypeElement t_ = op.constructorType().returnType();
-                        JavaType t = (JavaType) t_;
-                        switch (t.dimensions()) {
-                            case 0 -> {
-                                if (isLastOpResultOnStack) {
-                                    int slot = c.assignSlot(oprOnStack);
-                                    storeInstruction(cob, rvt, slot);
-                                    isLastOpResultOnStack = false;
-                                    oprOnStack = null;
+                        switch (op.constructorType().returnType()) {
+                            case ArrayType at -> {
+                                processOperands(op);
+                                if (at.dimensions() == 1) {
+                                    ClassDesc ctd = at.componentType().toNominalDescriptor();
+                                    if (ctd.isPrimitive()) {
+                                        cob.newarray(TypeKind.from(ctd));
+                                    } else {
+                                        cob.anewarray(ctd);
+                                    }
+                                } else {
+                                    cob.multianewarray(at.toNominalDescriptor(), op.operands().size());
                                 }
-                                cob.new_(t.toNominalDescriptor())
-                                   .dup();
-                                processOperands(cob, c, op, false);
+                            }
+                            case JavaType jt -> {
+                                cob.new_(jt.toNominalDescriptor())
+                                    .dup();
+                                processOperands(op);
                                 cob.invokespecial(
                                         ((JavaType) op.resultType()).toNominalDescriptor(),
                                         ConstantDescs.INIT_NAME,
                                         MethodRef.toNominalDescriptor(op.constructorType())
-                                                .changeReturnType(ConstantDescs.CD_void));
+                                                 .changeReturnType(ConstantDescs.CD_void));
                             }
-                            case 1 -> {
-                                processOperands(cob, c, op, isLastOpResultOnStack);
-                                ClassDesc ctd = t.componentType().toNominalDescriptor();
-                                if (ctd.isPrimitive()) {
-                                    cob.newarray(TypeKind.from(ctd));
-                                } else {
-                                    cob.anewarray(ctd);
-                                }
-                            }
-                            default -> {
-                                processOperands(cob, c, op, isLastOpResultOnStack);
-                                cob.multianewarray(t.toNominalDescriptor(), op.operands().size());
-                            }
+                            default ->
+                                throw new IllegalArgumentException("Invalid return type: "
+                                                                    + op.constructorType().returnType());
                         }
+                        push(op.result());
                     }
                     case InvokeOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         // @@@ Enhance method descriptor to include how the method is to be invoked
                         // Example result of DirectMethodHandleDesc.toString()
                         //   INTERFACE_VIRTUAL/IntBinaryOperator::applyAsInt(IntBinaryOperator,int,int)int
@@ -667,7 +733,7 @@ public final class BytecodeGenerator {
                         // which may be insufficient in certain cases.
                         DirectMethodHandleDesc.Kind descKind;
                         try {
-                            descKind = resolveToMethodHandleDesc(c.lookup, op.invokeDescriptor()).kind();
+                            descKind = resolveToMethodHandleDesc(lookup, op.invokeDescriptor()).kind();
                         } catch (ReflectiveOperationException e) {
                             // @@@ Approximate fallback
                             if (op.hasReceiver()) {
@@ -684,7 +750,8 @@ public final class BytecodeGenerator {
                                     case INTERFACE_VIRTUAL          -> Opcode.INVOKEINTERFACE;
                                     case SPECIAL, INTERFACE_SPECIAL -> Opcode.INVOKESPECIAL;
                                     default ->
-                                        throw new IllegalStateException("Bad method descriptor resolution: " + op.opType() + " > " + op.invokeDescriptor());
+                                        throw new IllegalStateException("Bad method descriptor resolution: "
+                                                                        + op.opType() + " > " + op.invokeDescriptor());
                                 },
                                 ((JavaType) md.refType()).toNominalDescriptor(),
                                 md.name(),
@@ -694,12 +761,10 @@ public final class BytecodeGenerator {
                                     default -> false;
                                 });
 
-                        if (op.resultType().equals(JavaType.VOID) && !op.operands().isEmpty()) {
-                            isLastOpResultOnStack = false;
-                        }
+                        push(op.result());
                     }
                     case FieldAccessOp.FieldLoadOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processOperands(op);
                         FieldRef fd = op.fieldDescriptor();
                         if (op.operands().isEmpty()) {
                             cob.getstatic(
@@ -712,10 +777,10 @@ public final class BytecodeGenerator {
                                     fd.name(),
                                     ((JavaType) fd.type()).toNominalDescriptor());
                         }
+                        push(op.result());
                     }
                     case FieldAccessOp.FieldStoreOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
-                        isLastOpResultOnStack = false;
+                        processOperands(op);
                         FieldRef fd = op.fieldDescriptor();
                         if (op.operands().size() == 1) {
                             cob.putstatic(
@@ -730,70 +795,105 @@ public final class BytecodeGenerator {
                         }
                     }
                     case InstanceOfOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         cob.instanceof_(((JavaType) op.type()).toNominalDescriptor());
+                        push(op.result());
                     }
                     case CastOp op -> {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         cob.checkcast(((JavaType) op.type()).toNominalDescriptor());
+                        push(op.result());
+                    }
+                    case LambdaOp op -> {
+                        JavaType intfType = (JavaType)op.functionalInterface();
+                        MethodTypeDesc mtd = MethodRef.toNominalDescriptor(op.invokableType());
+                        try {
+                            Class<?> intfClass = (Class<?>)intfType.erasure().resolve(lookup);
+                            processOperands(op.capturedValues());
+                            ClassDesc[] captureTypes = op.capturedValues().stream()
+                                    .map(Value::type).map(BytecodeGenerator::toClassDesc).toArray(ClassDesc[]::new);
+                            int lambdaIndex = lambdaSink.size();
+                            if (Quotable.class.isAssignableFrom(intfClass)) {
+                                // @@@ double the captured values to enable LambdaMetafactory.FLAG_QUOTABLE
+                                for (Value cv : op.capturedValues()) {
+                                    load(cv);
+                                }
+                                cob.invokedynamic(DynamicCallSiteDesc.of(
+                                        DMHD_LAMBDA_ALT_METAFACTORY,
+                                        funcIntfMethodName(intfClass),
+                                        // @@@ double the descriptor parameters
+                                        MethodTypeDesc.of(intfType.toNominalDescriptor(),
+                                                          Stream.concat(Stream.of(captureTypes),
+                                                                        Stream.of(captureTypes)).toList()),
+                                        mtd,
+                                        MethodHandleDesc.ofMethod(DirectMethodHandleDesc.Kind.STATIC,
+                                                                  className,
+                                                                  "lambda$" + lambdaIndex,
+                                                                  mtd.insertParameterTypes(0, captureTypes)),
+                                        mtd,
+                                        LambdaMetafactory.FLAG_QUOTABLE,
+                                        MethodHandleDesc.ofField(DirectMethodHandleDesc.Kind.STATIC_GETTER,
+                                                                 className,
+                                                                 "lambda$" + lambdaIndex + "$op",
+                                                                 CD_String)));
+                                quotable.set(lambdaSink.size());
+                            } else {
+                                cob.invokedynamic(DynamicCallSiteDesc.of(
+                                        DMHD_LAMBDA_METAFACTORY,
+                                        funcIntfMethodName(intfClass),
+                                        MethodTypeDesc.of(intfType.toNominalDescriptor(), captureTypes),
+                                        mtd,
+                                        MethodHandleDesc.ofMethod(DirectMethodHandleDesc.Kind.STATIC,
+                                                                  className,
+                                                                  "lambda$" + lambdaIndex,
+                                                                  mtd.insertParameterTypes(0, captureTypes)),
+                                        mtd));
+                            }
+                            lambdaSink.add(op);
+                        } catch (ReflectiveOperationException e) {
+                            throw new IllegalArgumentException(e);
+                        }
+                        push(op.result());
                     }
                     default ->
                         throw new UnsupportedOperationException("Unsupported operation: " + ops.get(i));
                 }
-                // Free up slots for values that are no longer live
-                c.freeSlotsOfOp(o);
-                // Assign slot to operation result
-                if (rvt != null) {
-                    if (!isResultOnlyUse(o.result())) {
-                        isLastOpResultOnStack = false;
-                        oprOnStack = null;
-                        int slot = c.assignSlot(o.result());
-                        storeInstruction(cob, rvt, slot);
-                    } else {
-                        isLastOpResultOnStack = true;
-                        oprOnStack = o.result();
-                    }
-                }
             }
             Op top = b.terminatingOp();
-            c.freeSlotsOfOp(top);
             switch (top) {
-                case CoreOps.ReturnOp op -> {
+                case CoreOp.ReturnOp op -> {
                     Value a = op.returnValue();
                     if (a == null) {
                         cob.return_();
                     } else {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
+                        processFirstOperand(op);
                         cob.returnInstruction(toTypeKind(a.type()));
                     }
                 }
                 case ThrowOp op -> {
-                    processOperands(cob, c, op, isLastOpResultOnStack);
+                    processFirstOperand(op);
                     cob.athrow();
                 }
                 case BranchOp op -> {
-                    assignBlockArguments(op, op.branch(), cob, c);
-                    cob.goto_(c.getLabel(op.branch().targetBlock()));
+                    assignBlockArguments(op.branch());
+                    cob.goto_(getLabel(op.branch()));
                 }
                 case ConditionalBranchOp op -> {
-                    if (getConditionForCondBrOp(op) instanceof CoreOps.BinaryTestOp btop) {
+                    if (getConditionForCondBrOp(op) instanceof CoreOp.BinaryTestOp btop) {
                         // Processing of the BinaryTestOp was deferred, so it can be merged with CondBrOp
-                        processOperands(cob, c, btop, isLastOpResultOnStack);
-                        conditionalBranch(cob, c, btop, op.trueBranch(), op.falseBranch());
+                        processOperands(btop);
+                        conditionalBranch(btop, op.trueBranch(), op.falseBranch());
                     } else {
-                        processOperands(cob, c, op, isLastOpResultOnStack);
-                        conditionalBranch(cob, c, Opcode.IFEQ, op, op.trueBranch(), op.falseBranch());
+                        processOperands(op);
+                        conditionalBranch(Opcode.IFEQ, op, op.trueBranch(), op.falseBranch());
                     }
                 }
                 case ExceptionRegionEnter op -> {
-                    assignBlockArguments(op, op.start(), cob, c);
-                    for (Block.Reference catchBlock : op.catchBlocks()) {
-                        c.transitionLiveSlotSetTo(catchBlock.targetBlock());
-                    }
+                    assignBlockArguments(op.start());
                 }
                 case ExceptionRegionExit op -> {
-                    assignBlockArguments(op, op.end(), cob, c);
-                    cob.goto_(c.getLabel(op.end().targetBlock()));
+                    assignBlockArguments(op.end());
+                    cob.goto_(getLabel(op.end()));
                 }
                 default ->
                     throw new UnsupportedOperationException("Terminating operation not supported: " + top);
@@ -801,148 +901,103 @@ public final class BytecodeGenerator {
         }
     }
 
-    static final class LiveSlotSet {
-        final Map<Value, Integer> liveSet;
-        final BitSet freeSlots;
+    // @@@ this method will apperar in CodeBuilder with next merge/update from master
+    static CodeBuilder conversion(CodeBuilder cob, TypeKind fromType, TypeKind toType) {
+        return switch (fromType) {
+            case IntType, ByteType, CharType, ShortType, BooleanType ->
+                    switch (toType) {
+                        case IntType -> cob;
+                        case LongType -> cob.i2l();
+                        case DoubleType -> cob.i2d();
+                        case FloatType -> cob.i2f();
+                        case ByteType -> cob.i2b();
+                        case CharType -> cob.i2c();
+                        case ShortType -> cob.i2s();
+                        case BooleanType -> cob.iconst_1().iand();
+                        case VoidType, ReferenceType ->
+                            throw new IllegalArgumentException(String.format("convert %s -> %s", fromType, toType));
+                    };
+            case LongType ->
+                    switch (toType) {
+                        case IntType -> cob.l2i();
+                        case LongType -> cob;
+                        case DoubleType -> cob.l2d();
+                        case FloatType -> cob.l2f();
+                        case ByteType -> cob.l2i().i2b();
+                        case CharType -> cob.l2i().i2c();
+                        case ShortType -> cob.l2i().i2s();
+                        case BooleanType -> cob.l2i().iconst_1().iand();
+                        case VoidType, ReferenceType ->
+                            throw new IllegalArgumentException(String.format("convert %s -> %s", fromType, toType));
+                    };
+            case DoubleType ->
+                    switch (toType) {
+                        case IntType -> cob.d2i();
+                        case LongType -> cob.d2l();
+                        case DoubleType -> cob;
+                        case FloatType -> cob.d2f();
+                        case ByteType -> cob.d2i().i2b();
+                        case CharType -> cob.d2i().i2c();
+                        case ShortType -> cob.d2i().i2s();
+                        case BooleanType -> cob.d2i().iconst_1().iand();
+                        case VoidType, ReferenceType ->
+                            throw new IllegalArgumentException(String.format("convert %s -> %s", fromType, toType));
+                    };
+            case FloatType ->
+                    switch (toType) {
+                        case IntType -> cob.f2i();
+                        case LongType -> cob.f2l();
+                        case DoubleType -> cob.f2d();
+                        case FloatType -> cob;
+                        case ByteType -> cob.f2i().i2b();
+                        case CharType -> cob.f2i().i2c();
+                        case ShortType -> cob.f2i().i2s();
+                        case BooleanType -> cob.f2i().iconst_1().iand();
+                        case VoidType, ReferenceType ->
+                            throw new IllegalArgumentException(String.format("convert %s -> %s", fromType, toType));
+                    };
+            case VoidType, ReferenceType ->
+                throw new IllegalArgumentException(String.format("convert %s -> %s", fromType, toType));
+        };
+    }
 
-        public LiveSlotSet() {
-            this.liveSet = new HashMap<>();
-            this.freeSlots = new BitSet();
+    private boolean inBlockArgs(Op.Result res) {
+        // Check if used in successor
+        for (Block.Reference s : res.declaringBlock().successors()) {
+            if (s.arguments().contains(res)) {
+                return true;
+            }
         }
+        return false;
+    }
 
-        void transitionLiveSlotSetFrom(LiveSlotSet that) {
-            freeSlots.or(that.freeSlots);
-
-            // Filter dead values, those whose slots have been freed
-            Iterator<Map.Entry<Value, Integer>> slots = that.liveSet.entrySet().iterator();
-            while (slots.hasNext()) {
-                var slot = slots.next();
-                if (!freeSlots.get(slot.getValue())) {
-                    liveSet.put(slot.getKey(), slot.getValue());
+    private void push(Op.Result res) {
+        assert oprOnStack == null;
+        if (res.type().equals(JavaType.VOID)) return;
+        if (isNextUse(res)) {
+            if (res.uses().size() > 1 || inBlockArgs(res)) {
+                switch (toTypeKind(res.type()).slotSize()) {
+                    case 1 -> cob.dup();
+                    case 2 -> cob.dup2();
                 }
+                storeIfUsed(res);
             }
-        }
-
-        int getSlot(Value v) {
-            Integer slot = liveSet.get(v);
-            if (slot == null) {
-                throw new IllegalArgumentException("Value is not assigned a slot");
-            }
-
-            return slot;
-        }
-
-        int assignSlot(Value v) {
-            if (liveSet.containsKey(v)) {
-                throw new IllegalArgumentException("Value is assigned a slot");
-            }
-
-            // If no uses then no slot is assigned
-            Set<Op.Result> uses = v.uses();
-            if (uses.isEmpty()) {
-                // @@@
-                return -1;
-            }
-
-            // Find a free slot
-            int slot = findSlot(slotsPerValue(v));
-
-            liveSet.put(v, slot);
-            return slot;
-        }
-
-        int getOrAssignSlot(Value v) {
-            return getOrAssignSlot(v, false);
-        }
-
-        int getOrAssignSlot(Value v, boolean assignIfUnused) {
-            // If value is already active return slot
-            Integer slotBox = liveSet.get(v);
-            if (slotBox != null) {
-                // Remove any free slot if present for reassignment
-                freeSlots.clear(slotBox);
-                if (slotsPerValue(v) == 2) {
-                    freeSlots.clear(slotBox + 1);
-                }
-                return slotBox;
-            }
-
-            // If no users then no slot is assigned
-            Set<Op.Result> users = v.uses();
-            if (!assignIfUnused && users.isEmpty()) {
-                // @@@
-                return -1;
-            }
-
-            // Find a free slot
-            int slot = findSlot(slotsPerValue(v));
-
-            liveSet.put(v, slot);
-            return slot;
-        }
-
-        private int findSlot(int nSlots) {
-            if (freeSlots.isEmpty()) {
-                return createNewSlot();
-            } else if (nSlots == 1) {
-                int slot = freeSlots.nextSetBit(0);
-                freeSlots.clear(slot);
-                return slot;
-            } else {
-                assert nSlots == 2;
-                // Find first 2 contiguous slots
-                int slot = 0;
-                slot = freeSlots.nextSetBit(slot);
-                while (slot != -1) {
-                    int next = freeSlots.nextSetBit(slot + 1);
-                    if (next - slot == 1) {
-                        freeSlots.clear(slot);
-                        freeSlots.clear(next);
-                        return slot;
-                    }
-
-                    slot = next;
-                }
-                return createNewSlot();
-            }
-        }
-
-        private int createNewSlot() {
-            int slot = 0;
-            if (!liveSet.isEmpty()) {
-                // @@@ this is inefficient, track mox slot value
-                Map.Entry<Value, Integer> e = liveSet.entrySet().stream().reduce((e1, e2) -> {
-                    return e1.getValue() >= e2.getValue()
-                            ? e1 : e2;
-                }).get();
-                slot = e.getValue() + slotsPerValue(e.getKey());
-            }
-            return slot;
-        }
-
-        void freeSlot(Value v) {
-            // Add the value's slot to the free list, if present
-            // The value and slot are still preserved in the live set,
-            // so slots can still be queried, but no slots should be assigned
-            // to new values until it is safe to do so
-//@@@ BytecodeLift does not handle slot overrides correctly yet
-//            Integer slot = liveSet.get(v);
-//            if (slot != null) {
-//                freeSlots.set(slot);
-//                if (slotsPerValue(v) == 2) {
-//                    freeSlots.set(slot + 1);
-//                }
-//            }
-        }
-
-        static int slotsPerValue(Value x) {
-            return x.type().equals(JavaType.DOUBLE) || x.type().equals(JavaType.LONG)
-                    ? 2
-                    : 1;
+            oprOnStack = res;
+        } else {
+            storeIfUsed(res);
+            oprOnStack = null;
         }
     }
 
-    private static Op getConditionForCondBrOp(CoreOps.ConditionalBranchOp op) {
+    // the rhs of any shift instruction must be int or smaller -> convert longs
+    private void adjustRightTypeToInt(Op op) {
+        TypeElement right = op.operands().getLast().type();
+        if (right.equals(JavaType.LONG)) {
+            cob.convertInstruction(toTypeKind(right), TypeKind.IntType);
+        }
+    }
+
+    private static Op getConditionForCondBrOp(CoreOp.ConditionalBranchOp op) {
         Value p = op.predicate();
         if (p.uses().size() != 1) {
             return null;
@@ -966,110 +1021,139 @@ public final class BytecodeGenerator {
         }
     }
 
-    private static void conditionalBranch(CodeBuilder cob, ConversionContext c, BinaryTestOp op,
-                                          Block.Reference trueBlock, Block.Reference falseBlock) {
-        conditionalBranch(cob, c, prepareReverseCondition(cob, op), op, trueBlock, falseBlock);
-    }
-
-    private static void conditionalBranch(CodeBuilder cob, ConversionContext c, Opcode reverseOpcode, Op op,
-                                          Block.Reference trueBlock, Block.Reference falseBlock) {
-        if (!needToAssignBlockArguments(falseBlock.targetBlock(), c)) {
-            cob.branchInstruction(reverseOpcode, c.getLabel(falseBlock.targetBlock()));
-        } else {
-            cob.ifThen(reverseOpcode,
-                bb -> {
-                    assignBlockArguments(op, falseBlock, bb, c);
-                    bb.goto_(c.getLabel(falseBlock.targetBlock()));
-                });
-        }
-        assignBlockArguments(op, trueBlock, cob, c);
-        cob.goto_(c.getLabel(trueBlock.targetBlock()));
-    }
-
-    private static Opcode prepareReverseCondition(CodeBuilder cob, BinaryTestOp op) {
-        TypeKind vt = toTypeKind(op.operands().get(0).type());
-        if (vt == TypeKind.IntType) {
-            return switch (op) {
-                case EqOp _ -> Opcode.IF_ICMPNE;
-                case NeqOp _ -> Opcode.IF_ICMPEQ;
-                case GtOp _ -> Opcode.IF_ICMPLE;
-                case GeOp _ -> Opcode.IF_ICMPLT;
-                case LtOp _ -> Opcode.IF_ICMPGE;
-                case LeOp _ -> Opcode.IF_ICMPGT;
-                default ->
-                    throw new UnsupportedOperationException(op.opName());
-            };
-        } else {
-            switch (vt) {
-                case FloatType -> cob.fcmpg(); // FCMPL?
-                case LongType -> cob.lcmp();
-                case DoubleType -> cob.dcmpg(); //CMPL?
-                default ->
-                    throw new UnsupportedOperationException(op.opName() + " on " + vt);
-            }
-            return switch (op) {
-                case EqOp _ -> Opcode.IFNE;
-                case NeqOp _ -> Opcode.IFEQ;
-                case GtOp _ -> Opcode.IFLE;
-                case GeOp _ -> Opcode.IFLT;
-                case LtOp _ -> Opcode.IFGE;
-                case LeOp _ -> Opcode.IFGT;
-                default ->
-                    throw new UnsupportedOperationException(op.opName());
-            };
-        }
-    }
-
-    private static boolean needToAssignBlockArguments(Block b, ConversionContext c) {
-        c.transitionLiveSlotSetTo(b);
-        LiveSlotSet liveSlots = c.liveSlotSet(b);
-        for (Block.Parameter barg : b.parameters()) {
-            if (liveSlots.getOrAssignSlot(barg) >= 0) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static void assignBlockArguments(Op op, Block.Reference s, CodeBuilder cob, ConversionContext c) {
-        List<Value> sargs = s.arguments();
-        List<Block.Parameter> bargs = s.targetBlock().parameters();
-
-        // Transition over live-out to successor block
-        // All predecessors of successor will have the same live-out set so it does not
-        // matter which predecessor performs this action
-        c.transitionLiveSlotSetTo(s.targetBlock());
-
-        // First push successor arguments on the stack, then pop and assign
-        // so as not to overwrite slots that are reused slots at different argument positions
-
-        LiveSlotSet liveSlots = c.liveSlotSet(s.targetBlock());
-        for (int i = 0; i < bargs.size(); i++) {
-            Block.Parameter barg = bargs.get(i);
-            int bslot = liveSlots.getOrAssignSlot(barg);
-            if (bslot >= 0) {
-                Value value = sargs.get(i);
-                if (value instanceof Op.Result or &&
-                        or.op() instanceof CoreOps.ConstantOp constantOp &&
-                        !constantOp.resultType().equals(JavaType.J_L_CLASS)) {
-                    cob.constantInstruction(fromValue(constantOp.value()));
-                    TypeKind vt = toTypeKind(barg.type());
-                    cob.storeInstruction(vt, bslot);
-                } else {
-                    int sslot = c.getSlot(value);
-
-                    // Assignment only required if slots differ
-                    if (sslot != bslot) {
-                        TypeKind vt = toTypeKind(barg.type());
-                        cob.loadInstruction(vt, sslot);
-                        cob.storeInstruction(vt, bslot);
-                    }
+    private String funcIntfMethodName(Class<?> intfc) {
+        String uniqueName = null;
+        for (Method m : intfc.getMethods()) {
+            // ensure it's SAM interface
+            String methodName = m.getName();
+            if (Modifier.isAbstract(m.getModifiers())
+                    && (m.getReturnType() != String.class
+                        || m.getParameterCount() != 0
+                        || !methodName.equals("toString"))
+                    && (m.getReturnType() != int.class
+                        || m.getParameterCount() != 0
+                        || !methodName.equals("hashCode"))
+                    && (m.getReturnType() != boolean.class
+                        || m.getParameterCount() != 1
+                        || m.getParameterTypes()[0] != Object.class
+                        || !methodName.equals("equals"))) {
+                if (uniqueName == null) {
+                    uniqueName = methodName;
+                } else if (!uniqueName.equals(methodName)) {
+                    // too many abstract methods
+                    throw new IllegalArgumentException("Not a single-method interface: " + intfc.getName());
                 }
             }
         }
+        if (uniqueName == null) {
+            throw new IllegalArgumentException("No method in: " + intfc.getName());
+        }
+        return uniqueName;
     }
 
-    static DirectMethodHandleDesc resolveToMethodHandleDesc(MethodHandles.Lookup l, MethodRef d) throws ReflectiveOperationException {
+    private void conditionalBranch(BinaryTestOp op, Block.Reference trueBlock, Block.Reference falseBlock) {
+        conditionalBranch(prepareReverseCondition(op), op, trueBlock, falseBlock);
+    }
+
+    private void conditionalBranch(Opcode reverseOpcode, Op op, Block.Reference trueBlock, Block.Reference falseBlock) {
+        if (!needToAssignBlockArguments(falseBlock)) {
+            cob.branchInstruction(reverseOpcode, getLabel(falseBlock));
+        } else {
+            cob.ifThen(reverseOpcode,
+                bb -> {
+                    assignBlockArguments(falseBlock);
+                    bb.goto_(getLabel(falseBlock));
+                });
+        }
+        assignBlockArguments(trueBlock);
+        cob.goto_(getLabel(trueBlock));
+    }
+
+    private Opcode prepareReverseCondition(BinaryTestOp op) {
+        return switch (toTypeKind(op.operands().get(0).type())) {
+            case IntType, BooleanType, ByteType, ShortType, CharType ->
+                switch (op) {
+                    case EqOp _ -> Opcode.IF_ICMPNE;
+                    case NeqOp _ -> Opcode.IF_ICMPEQ;
+                    case GtOp _ -> Opcode.IF_ICMPLE;
+                    case GeOp _ -> Opcode.IF_ICMPLT;
+                    case LtOp _ -> Opcode.IF_ICMPGE;
+                    case LeOp _ -> Opcode.IF_ICMPGT;
+                    default ->
+                        throw new UnsupportedOperationException(op.opName() + " on int");
+                };
+            case ReferenceType ->
+                switch (op) {
+                    case EqOp _ -> Opcode.IF_ACMPNE;
+                    case NeqOp _ -> Opcode.IF_ACMPEQ;
+                    default ->
+                        throw new UnsupportedOperationException(op.opName() + " on Object");
+                };
+            case FloatType -> {
+                cob.fcmpg(); // FCMPL?
+                yield reverseIfOpcode(op);
+            }
+            case LongType -> {
+                cob.lcmp();
+                yield reverseIfOpcode(op);
+            }
+            case DoubleType -> {
+                cob.dcmpg(); //CMPL?
+                yield reverseIfOpcode(op);
+            }
+            default ->
+                throw new UnsupportedOperationException(op.opName() + " on " + op.operands().get(0).type());
+        };
+    }
+
+    private static Opcode reverseIfOpcode(BinaryTestOp op) {
+        return switch (op) {
+            case EqOp _ -> Opcode.IFNE;
+            case NeqOp _ -> Opcode.IFEQ;
+            case GtOp _ -> Opcode.IFLE;
+            case GeOp _ -> Opcode.IFLT;
+            case LtOp _ -> Opcode.IFGE;
+            case LeOp _ -> Opcode.IFGT;
+            default ->
+                throw new UnsupportedOperationException(op.opName());
+        };
+    }
+
+    private boolean needToAssignBlockArguments(Block.Reference ref) {
+        List<Value> sargs = ref.arguments();
+        List<Block.Parameter> bargs = ref.targetBlock().parameters();
+        boolean need = false;
+        for (int i = 0; i < bargs.size(); i++) {
+            Block.Parameter barg = bargs.get(i);
+            if (!barg.uses().isEmpty() && !barg.equals(sargs.get(i))) {
+                need = true;
+                allocateSlot(barg);
+            }
+        }
+        return need;
+    }
+
+    private void assignBlockArguments(Block.Reference ref) {
+        List<Value> sargs = ref.arguments();
+        List<Block.Parameter> bargs = ref.targetBlock().parameters();
+        // First push successor arguments on the stack, then pop and assign
+        // so as not to overwrite slots that are reused slots at different argument positions
+        for (int i = 0; i < bargs.size(); i++) {
+            Block.Parameter barg = bargs.get(i);
+            Value value = sargs.get(i);
+            if (!barg.uses().isEmpty() && !barg.equals(value)) {
+                if (oprOnStack == value) {
+                    oprOnStack = null;
+                } else {
+                    load(value);
+                }
+                storeIfUsed(barg);
+            }
+        }
+    }
+
+    static DirectMethodHandleDesc resolveToMethodHandleDesc(MethodHandles.Lookup l,
+                                                            MethodRef d) throws ReflectiveOperationException {
         MethodHandle mh = d.resolveToHandle(l);
 
         if (mh.describeConstable().isEmpty()) {
@@ -1082,5 +1166,44 @@ public final class BytecodeGenerator {
         }
 
         return dmhd;
+    }
+
+    static CoreOp.FuncOp quote(CoreOp.LambdaOp lop) {
+        List<Value> captures = lop.capturedValues();
+
+        // Build the function type
+        List<TypeElement> params = captures.stream()
+                .map(v -> v.type() instanceof VarType vt ? vt.valueType() : v.type())
+                .toList();
+        FunctionType ft = FunctionType.functionType(CoreOp.QuotedOp.QUOTED_TYPE, params);
+
+        // Build the function that quotes the lambda
+        return CoreOp.func("q", ft).body(b -> {
+            // Create variables as needed and obtain the captured values
+            // for the copied lambda
+            List<Value> outputCaptures = new ArrayList<>();
+            for (int i = 0; i < captures.size(); i++) {
+                Value c = captures.get(i);
+                Block.Parameter p = b.parameters().get(i);
+                if (c.type() instanceof VarType _) {
+                    Value var = b.op(CoreOp.var(String.valueOf(i), p));
+                    outputCaptures.add(var);
+                } else {
+                    outputCaptures.add(p);
+                }
+            }
+
+            // Quoted the lambda expression
+            Value q = b.op(CoreOp.quoted(b.parentBody(), qb -> {
+                // Map the lambda's parent block to the quoted block
+                // We are copying lop in the context of the quoted block
+                qb.context().mapBlock(lop.parentBlock(), qb);
+                // Map the lambda's captured values
+                qb.context().mapValues(captures, outputCaptures);
+                // Return the lambda to be copied in the quoted operation
+                return lop;
+            }));
+            b.op(CoreOp._return(q));
+        });
     }
 }
